fix z-index mobile

--- a/styles.css
+++ b/styles.css
@@ -72,6 +72,7 @@ nav ul li a {
     font-weight:600;
 }
 
+
 @media screen and (max-width: 800px) {
     .logo {
         padding: 0;
@@ -143,7 +144,7 @@ nav ul li a {
         width: 50px;
         height: 50px;
         cursor: pointer;
-        z-index:1;
+        z-index:3;
         border-radius:50%;
     }
 
